--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -11,7 +11,7 @@ development:
       hosts:
         - localhost:27017
       # Define the default database name.
-      database: aggregation_dev
+      database: analytics_next_dev
       # Since this database points at a session connected to MongoHQ, we must
       # provide the authentication details.
 
@@ -63,4 +63,4 @@ test:
       hosts:
         - localhost:27017
       # Define the default database name.
-      database: aggregation_test
+      database: analytics_next_test
